# BCI-Nlimited

./: .gitignore  README.md  app_send_osc.py  package.json  pyproject.toml  requirements.txt  send_osc_fortest.py  validation_fortest.py
bci-music-dashboard/: .env.example  .gitignore  README.md  README.zh-CN.md  docker-compose.yml
bci-music-dashboard/backend/: .dockerignore  Dockerfile  requirements-music.txt  requirements.txt
bci-music-dashboard/backend/app/: __init__.py  main.py
bci-music-dashboard/backend/tests/: test_emotion_window.py  test_motif_library.py  test_music_density.py  test_music_generator_runtime.py  test_osc_output.py  test_presets.py  test_segment_composer.py  test_theme_composition.py
bci-music-dashboard/docs/: lyria_xylophone_prompts.md
bci-music-dashboard/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
bci-music-dashboard/frontend/src/: App.vue  style.css  (+1 more)
bci-music-dashboard/music_library/: README.md
bci-music-dashboard/scripts/: export-docker-bundle.sh  import-docker-bundle.ps1  start-docker.ps1
bci-music-dashboard/training_data/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  TelemetryCard.vue  main.js  styles.css
server/: __init__.py  app.py  config.py  state.py
server/outputs/: __init__.py  midi.py  osc.py
server/pipeline/: __init__.py  emotion.py  xdf.py
server/testing/: __init__.py  fake_stream.py  send_osc.py  validation_server.py
tests/: test_config.py  test_midi_mapping.py  test_osc_payload.py
(+348 files in other folders)
